# WEB-Python-HW9

./: README.md  config.ini  load_json.py  main.py  pyproject.toml
src/: authors.json  models.py
test_spyder/test_spyder/: settings.py
test_spyder/test_spyder/spiders/: quotes.py
